GenShen: Old marking may encounter invalid pointers in SATB buffers

XMLWordPrintable

      Weak handles which are null'd out after final marking of young, but during marking of old, will have their original referent placed into a SATB buffer. These entries need to be purged before old marking resumes. In the case of abbreviated young cycles, these entries would not be purged.

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: