8319671: GenShen: Old marking may encounter invalid pointers in SATB buffers

Reviewed-by: ysr