src/hotspot/share/gc/shenandoah/shenandoahConcurrentGC.cpp
@@ -1266,8 +1266,14 @@ void ShenandoahConcurrentGC::op_final_roots() {
   heap->set_evacuation_in_progress(false);
 
   if (heap->mode()->is_generational()) {
-    ShenandoahMarkingContext *ctx = heap->complete_marking_context();
+    // If the cycle was shortened for having enough immediate garbage, this could be
+    // the last GC safepoint before concurrent marking of old resumes. We must be sure
+    // that old mark threads don't see any pointers to garbage in the SATB buffers.
+    if (heap->is_concurrent_old_mark_in_progress()) {
+      heap->transfer_old_pointers_from_satb();
+    }
 
+    ShenandoahMarkingContext *ctx = heap->complete_marking_context();
     for (size_t i = 0; i < heap->num_regions(); i++) {
       ShenandoahHeapRegion *r = heap->get_region(i);
       if (r->is_active() && r->is_young()) {
